# baseball

./: .gitignore  ATTRIBUTE_UNIFICATION_STATUS.md  BEFORE_AND_AFTER.md  CLAUDE.md  COORDINATE_SYSTEM_FIX_REPORT.md  CSV_EXPORT_README.md  CSV_EXPORT_USAGE.md  DATABASE_README.md  FIELDER_BEHAVIOR_ANALYSIS.md  FIX_IMPLEMENTATION_SUMMARY.md  GAME_SIMULATION_NOTES.md  IMPLEMENTATION_SUCCESS.md  LICENSE  LOGGING_EXECUTIVE_SUMMARY.txt  MLB_REALISM_FIXES_2025-11-20.md  MLB_REALISM_PASS4_FINDINGS_2025-11-20.md  Modeling Baseball Batted Ball Trajectories for Realistic Simulation.docx  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PITCHING_ENHANCEMENTS.md  PLAY_BY_PLAY_ODDITIES.md  README.md  README_PERFORMANCE_TESTING.md  SWING_LOGIC_ANALYSIS.md  SWING_LOGIC_IMPROVEMENTS_SUMMARY.md  TESTING_STRATEGY.md  VALIDATION_RESULTS.md  add_print_functions.py  analyze_babip.py  analyze_ground_balls.py  analyze_hang_times_by_type.py  analyze_improvements.py  analyze_outcomes_by_type.py  app.py  audit_attribute_mappings.py  calibrate_with_spin.py  calibration_v2_synthetic.csv  calibration_with_angle_dependent_spin.csv  check_ballparks.py  check_collision_trajectories.py  (+123 more)
.github/: copilot-instructions.md
batted_ball/: __init__.py  advanced_stats.py  aerodynamics.py  at_bat.py  attributes.py  ballpark.py  ballpark_effects.py  baserunning.py  bulk_simulation.py  constants.py  contact.py  debug_metrics.py  defense_factory.py  environment.py  ev_la_distribution.py  fast_ground_ball.py  fast_trajectory.py  field_layout.py  (+35 more)
trajectory_rs/: Cargo.toml  README.md  pyproject.toml
trajectory_rs/src/: lib.rs
(+244 files in other folders)
