[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "trajectory_rs"
version = "0.1.0"
description = "High-performance RK4 trajectory integration for baseball simulation (Rust + PyO3)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.maturin]
features = ["pyo3/extension-module"]
